# hs-pattrans

./: .gitattributes  .gitignore  .gitmodules  .travis-cabal.yml  .travis-stack.yml  .travis.yml  LICENSE  Makefile  README.md  cabal.project  hs-mirex.cabal  hs-pattrans.cabal  index.html  output.csv  output.txt  prepare.sh  publish.sh  stack.yaml
.github/workflows/: ci.yml
app/: Main.hs
classical/: index.html
classical/algorithms/: bachBWV889Fg.html  beethovenOp2No1Mvt3.html  chopinOp24No4.html  gibbonsSilverSwan1612.html  index.html  mozartK282Mvt2.html  output-percentages.csv  output.csv  unclassified.txt  wtc2f20.tlp.html  wtc2f20.tlr.html  wtc2f20.txt.html  wtc2f20mono.tlf1.html
classical/experts/: bachBWV889Fg.html  beethovenOp2No1Mvt3.html  chopinOp24No4.html  gibbonsSilverSwan1612.html  index.html  mozartK282Mvt2.html  output-percentages.csv  output.csv  unclassified.txt
classical/random/: output.csv
data/HEMAN/pieces/: bach1.mid  bach2.mid  bee1.mid  hay1.mid  mo155.mid  mo458.mid
data/algOutput/2016MP/: bachBWV889Fg.txt  beethovenOp2No1Mvt3.txt
data/extracted/bach/: base.mid  occ1.mid  occ10.mid  occ11.mid  occ12.mid  occ13.mid  occ14.mid  occ15.mid  occ16.mid  occ17.mid  occ18.mid  occ19.mid  occ2.mid  occ20.mid  occ21.mid  occ22.mid  occ23.mid  occ24.mid  occ25.mid  occ26.mid  occ27.mid  occ28.mid  occ29.mid  occ3.mid  occ30.mid  occ31.mid  occ4.mid  occ5.mid  occ6.mid  occ7.mid  occ8.mid  occ9.mid
data/jazz/pieces/: Ah-Leu-Cha.mid  An_Oscar_For_Treadwell.mid  Another_Hairdo.mid  Anthropology.mid  Au_Private_(No.1).mid  Au_Private_(No.2).mid  Ballade.mid  Barbados.mid  Billie's_Bounce.mid  Bird_Gets_The_Worm.mid  Bloomdido.mid  Blue_Bird.mid  Blues_(Fast).mid  Blues_For_Alice.mid  Buzzy.mid  Card_Board.mid  Celerity.mid  Chasing_The_Bird.mid  Cheryl.mid  Chi_Chi.mid  Constellation.mid  Cosmic_Rays.mid  Dewey_Square.mid  Diverse.mid  Donna_Lee.mid  K.C.Blues.mid  Kim_(No.2).mid  Klaun_Stance.mid  Ko_Ko.mid  Laird_Baird.mid  Leap_Frog.mid  Marmaduke.mid  Merry-Go-Round.mid  Mohawk_(No.1).mid  (+22 more)
data/querySynth/: 1.mid
docs/: Main.html  Types.html  _config.yml  charts.html  charts0.html  classical.html  doc-index.html  index.html  index0.html  mini_Parser.html  ocean.css  template.html
docs/haddock/: Analysis.html  Charts.html  Discovery.html  EuterpeaUtils.html  Export.html  MIDI.html  Main.html  Parser.html  Transformations.html  Types.html  doc-index-126.html  doc-index-36.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-62.html  doc-index-63.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  (+13 more)
docs/paper/: acmart-pacmpl-template.aux  acmart-pacmpl-template.out  acmart-pacmpl-template.tex
folk/: index.html
folk/algorithms/: DaarGingEenHeer.html  DaarReedEenJonkheer.html  DaarWasLaatstmaalEenRuiter.html  DaarZouErEenMaagdjeVroegOpstaan.html  EenLindeboomStondInHetDal.html  EenSoudaanHadEenDochtertje.html  EnErWarenEensTweeZoeteliefjes.html  ErReedErEensEenRuiter.html  ErWasEenHerderinnetje.html  ErWasEenKoopmanRijkEnMachtig.html  ErWasEenMeisjeVanZestienJaren.html  ErWoondeEenVrouwtjeAlOverHetBos.html  FemmesVoulezVousEprouver.html  HeerHalewijn.html  HetVrouwtjeVanStavoren.html  HetWasLaatstOpEenZomerdag.html  HetWasOpEenDriekoningenavond.html  IkKwamLaatstEensInDeStad.html  KomLaatOnsNuZoStilNietZijn.html  LieveSchipperVaarMeOver.html  OGodIkLeefInNood.html  SoldaatKwamUitDeOorlog.html  VaarwelBruidjeSchoon.html  WatZagIkDaarVanVerre.html  ZolangDeBoomZalBloeien.html  index.html  output-percentages.csv  output.csv  unclassified.txt
folk/experts/: DaarGingEenHeer.html  DaarReedEenJonkheer.html  DaarWasLaatstmaalEenRuiter.html  DaarZouErEenMaagdjeVroegOpstaan.html  EenLindeboomStondInHetDal.html  EenSoudaanHadEenDochtertje.html  EnErWarenEensTweeZoeteliefjes.html  ErReedErEensEenRuiter.html  ErWasEenHerderinnetje.html  ErWasEenKoopmanRijkEnMachtig.html  ErWasEenMeisjeVanZestienJaren.html  ErWoondeEenVrouwtjeAlOverHetBos.html  FemmesVoulezVousEprouver.html  HeerHalewijn.html  HetVrouwtjeVanStavoren.html  HetWasLaatstOpEenZomerdag.html  HetWasOpEenDriekoningenavond.html  IkKwamLaatstEensInDeStad.html  KomLaatOnsNuZoStilNietZijn.html  LieveSchipperVaarMeOver.html  OGodIkLeefInNood.html  SoldaatKwamUitDeOorlog.html  VaarwelBruidjeSchoon.html  WatZagIkDaarVanVerre.html  ZolangDeBoomZalBloeien.html  index.html  output-percentages.csv  output.csv  unclassified.txt
folk/random/: output-percentages.csv
heman/: index.html
heman/algorithms/: bach1.html  bach2.html  bee1.html  hay1.csv.txt.txt.html  index.html  mo155.html  mo458.html  output-percentages.csv  output.csv  unclassified.txt
heman/experts/: Alex-hay1.jams.html  Andrew-hay1.jams.html  Bug Rampoke-hay1.jams.html  Chris-hay1.jams.html  Endaris-hay1.jams.html  Erik-hay1.jams.html  Jaq-hay1.jams.html  John-hay1.jams.html  Julia-hay1.jams.html  Kata-hay1.jams.html  Kristina-hay1.jams.html  Kyle-hay1.jams.html  Liam-hay1.jams.html  Matej-hay1.jams.html  Myriada-hay1.jams.html  Nathaniel-hay1.jams.html  OTOZ-hay1.jams.html  Penelope-hay1.jams.html  Pieball-hay1.jams.html  SEM-hay1.jams.html  Squirrel-hay1.jams.html  Tinaa-hay1.jams.html  Troisnyx-hay1.jams.html  Vanni-hay1.jams.html  Victoria-hay1.jams.html  Zach-hay1.jams.html  bach1.html  bach2.html  bee1.html  index.html  mo155.html  mo458.html  output-percentages.csv  output.csv  unclassified.txt
heman/random/: index.html
src/: .Mirex.hs.swp  Analysis.hs  Approx6Analysis.hs  Charts.hs  CompoAnalysis.hs  Discovery.hs  EuterpeaUtils.hs  ExactAnalysis.hs  Export.hs  HTML.hs  MIDI.hs  Main.hs  Mirex.hs  Parser.hs  ProtoAnalysis.hs  Render.hs  TherapicMIDI.hs  Transformations.hs  Types.hs
stats/: cluster.R  vis.R
test/: TransformationsSpec.hs
(+9567 files in other folders)
