name          : hs-mirex
version       : 0.1.0.0
synopsis      : A pattern language, based on the MIREX "Discovery of Repeated Themes & Sections" task.
homepage      : https://github.com/omelkonian/hs-mirex
author        : Orestis Melkonian
category      : Language
build-type    : Simple
cabal-version : >= 1.10

executable hs-mirex
  main-is:            Main.hs
  other-modules:      Types,
                      Transformations,
                      Parser,
                      Analysis,
                      Charts,
                      MIDI
  build-depends:      base >= 4.8,
                      parsec >= 3.1.13,
                      directory >= 1.3.1.5,
                      Chart >= 1.8,
                      Chart-cairo,
                      colour >= 2.3.3,
                      contravariant,
                      containers,
                      Euterpea == 2.0.6,
                      HCodecs == 0.5.1,
                      optparse-applicative == 0.13.2.0,
                      cassava == 0.4.5.1,
                      bytestring == 0.10.8.1,
                      parallel == 3.2.1.1,
                      async,
                      terminal-progress-bar == 0.1.1.1
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:     src
  default-language:   Haskell2010
