name             : hs-pattrans
version          : 0.1.0.0
synopsis         : A pattern language, based on the MIREX "Discovery of Repeated Themes & Sections" task.
homepage         : https://github.com/omelkonian/hs-pattrans
author           : Orestis Melkonian
category         : Language
build-type       : Simple
cabal-version    : >= 1.10

library
  hs-source-dirs:     src
  exposed-modules:    Types,
                      Transformations,
                      Parser,
                      Analysis,
                      Render,
                      MIDI,
                      EuterpeaUtils,
                      Discovery
  build-depends:      base >= 4.8,
                      parsec >= 3.1.13,
                      directory >= 1.3.1.5,
                      Chart >= 1.8,
                      Chart-cairo,
                      colour >= 2.3.3,
                      contravariant,
                      containers,
                      Euterpea == 2.0.6,
                      HCodecs == 0.5.1,
                      bytestring == 0.10.8.1,
                      cassava == 0.4.5.1,
                      parallel == 3.2.1.1,
                      async
  ghc-options:        -Wall -fno-warn-type-defaults -O2
  default-language:   Haskell2010

executable hs-pattrans
  hs-source-dirs:     app
  main-is:            Main.hs
  build-depends:      base,
                      hs-pattrans,
                      optparse-applicative == 0.13.2.0,
                      bytestring == 0.10.8.1
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
                      -fno-warn-type-defaults -O2
  default-language:   Haskell2010

test-suite spec
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:      TransformationsSpec
  build-depends:      base,
                      hs-pattrans,
                      QuickCheck,
                      hspec
  type:               exitcode-stdio-1.0
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
                      -fno-warn-type-defaults -O2
  default-language:   Haskell2010
