name             : hs-pattrans
version          : 0.1.0.0
synopsis         : A pattern language, based on the MIREX "Discovery of Repeated Themes & Sections" task.
homepage         : https://github.com/omelkonian/hs-pattrans
author           : Orestis Melkonian
category         : Language
build-type       : Simple
cabal-version    : >= 1.10

library
  hs-source-dirs:     src
  exposed-modules:    Types,
                      Transformations,
                      Parser,
                      Analysis,
                      Approx6Analysis,
                      Charts,
                      MIDI,
                      EuterpeaUtils,
                      Discovery,
                      TherapicMIDI
  build-depends:      Chart >= 1.8,
                      Chart-cairo,
                      Euterpea == 2.0.6,
                      HCodecs == 0.5.1,
                      async,
                      base >= 4.8,
                      cassava == 0.4.5.1,
                      colour >= 2.3.3,
                      containers,
                      contravariant,
                      directory >= 1.3.1.5,
                      hspec >= 2.4.4,
                      mtl >= 2.2.1,
                      parallel == 3.2.1.1,
                      parsec >= 3.1.13
  ghc-options:        -Wall -fno-warn-type-defaults -O2
  default-language:   Haskell2010

executable hs-pattrans
  hs-source-dirs:     app
  main-is:            Main.hs
  build-depends:      base,
                      bytestring == 0.10.8.1,
                      cassava == 0.4.5.1,
                      hs-pattrans,
                      hspec >= 2.4.4,
                      mtl >= 2.2.1,
                      optparse-applicative == 0.13.2.0
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
                      -fno-warn-type-defaults -O2
  default-language:   Haskell2010

test-suite spec
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:      TransformationsSpec
  build-depends:      QuickCheck,
                      base,
                      hs-pattrans,
                      hspec,
                      hspec >= 2.4.4,
                      mtl >= 2.2.1
  type:               exitcode-stdio-1.0
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
                      -fno-warn-type-defaults -O2
  default-language:   Haskell2010
