name             : hs-pattrans
version          : 0.1.0.2
homepage         : https://github.com/omelkonian/hs-pattrans
author           : Orestis Melkonian, Iris Yuping Ren
maintainer       : Orestis Melkonian <melkon.or@gmail.com>
category         : Language
build-type       : Simple
cabal-version    : >= 1.10
tested-with      : GHC == 8.0.2
license          : BSD3
license-file     : LICENSE
synopsis         : DSL for musical patterns and transformation, based on contravariant functors.
description      :
  A music DSL for defining pattern transformations, analyzing pattern datasets and detecting patterns.

source-repository head
    type: git
    location: git://github.com/omelkonian/hs-pattrans.git

library
  hs-source-dirs:     src
  exposed-modules:    Types,
                      Transformations,
                      Parser,
                      Analysis,
                      Render,
                      MIDI,
                      EuterpeaUtils,
                      Discovery,
                      TherapicMIDI,
                      HTML
  build-depends:      base >= 4.8 && <5,

                      mtl >= 2.2.1,
                      containers == 0.5.7.1,
                      contravariant == 1.5.2,
                      parsec >= 3.1.13,
                      directory >= 1.3.0.0 ,

                      Chart == 1.9.3,
                      Chart-diagrams == 1.9.3,
                      colour >= 2.3.5,
                      cassava == 0.5.2.0,

                      Euterpea == 2.0.7,
                      HCodecs == 0.5.1,

                      bytestring == 0.10.8.1,
                      hspec >= 2.4.4,
                      parallel >= 3.2.2.0,
                      split == 0.2.3.4,
                      async >= 2.2.2,

                      blaze-html >= 0.9,
                      shakespeare >= 2.0
  ghc-options:        -Wall -fno-warn-type-defaults
  default-language:   Haskell2010

executable hs-pattrans
  hs-source-dirs:     app
  main-is:            Main.hs
  build-depends:      base,
                      hs-pattrans,
                      optparse-applicative == 0.15.1.0,
                      split,
                      bytestring
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
                      -fno-warn-type-defaults
  default-language:   Haskell2010

test-suite spec
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:      TransformationsSpec
  build-depends:      QuickCheck,
                      base,
                      hs-pattrans,
                      QuickCheck,
                      hspec
  build-tool-depends: hspec-discover:hspec-discover
  type:               exitcode-stdio-1.0
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
                      -fno-warn-type-defaults
  default-language:   Haskell2010
